# MidiDrumiGen

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CURSOR_WORKFLOW.md  DEVELOPMENT_START_GUIDE.md  README.md  SETUP_COMPLETE.md  SETUP_GUIDE.md  alembic.ini  pyproject.toml  requirements.txt
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/_cfg/ides/: claude-code.yaml
.bmad/bmb/: config.yaml
.bmad/bmm/: config.yaml
.bmad/cis/: config.yaml
.bmad/core/: config.yaml
.claude/: settings.local.json
.claude/commands/: bmm-analyst.md  bmm-architect.md  bmm-dev.md  document-project.md
.cursorcontext/: 01_project_overview.md  02_architecture.md  03_dependencies.md  04_midi_operations.md  06_common_tasks.md
alembic/versions/: 6ad616b97364_initial_v2_0_schema.py  a86af6571aac_initial_v2_0_schema.py
configs/: README.md  base.yaml  redis.py  v2_config.yaml
docs/: ARCHITECTURE.md  COMPLETE_TEST_SUITE_SUMMARY.md  DOCUMENTATION_INDEX.md  GIT_WORKFLOW.md  MIGRATION_STATUS.md  ORCHESTRATOR_META_PROMPT.md  PHASE_3_COMPLETION.md  PHASE_3_HANDOVER.md  PHASE_4_COMPLETION.md  PHASE_4_HANDOVER.md  PRD.md  UI.md  UNIT_TESTS_SUMMARY.md  bmm-api-contracts.md  bmm-technology-stack.md  claude-code-bmad-commands.md  cursor_guide.md  epics.md  sprint-1-kickoff-checklist.md
docs/_old/archived/: 05_ml_pipeline.md  base.yaml  download_groove_midi.py  model_loader.py  transformer.py  (+5 more)
docs/agents/: LLM_PROVIDER_MANAGER_AGENT.md  RESEARCH_ORCHESTRATOR_AGENT.md
docs/sprint-artifacts/: e1-s2-web-article-collection.md  e1-s3-audio-analysis-collection.md  e1-s4-midi-database-collection.md  e3-s4-vector-similarity-search.context.xml  e3-s4-vector-similarity-search.md  epic-3-completion-report.md  epic-3-verification-report.md  sprint-status.yaml  tech-spec-epic-1.md  tech-spec-epic-2.md  tech-spec-epic-3.md  tech-spec-epic-4.md  tech-spec-epic-5.md  tech-spec-epic-6.md
scripts/: commit.ps1  commit.sh  demo_llm_quality.py  flatten_bmad_commands.py  generate_timbaland_deliverable.py  test_api.py  test_architecture.py  test_celery_tasks.py  test_claude_api.py  test_gemini.py  test_inference.py  test_midi_export.py  test_producer_research.py  verify_installation.py  verify_phase4.py
src/: __init__.py
src/ableton/: __init__.py
src/api/: __init__.py  main.py
src/database/: __init__.py  manager.py  models.py
src/inference/: __init__.py  generate.py  mock.py
src/midi/: __init__.py  constants.py  export.py  humanize.py  io.py  style_transfer.py  validate.py
src/models/: __init__.py  styles.py
src/research/: __init__.py  cache.py  llm_synthesizer.py  producer_agent.py  profile_builder.py  web_scraper.py
src/tasks/: __init__.py  tasks.py  worker.py
tests/: __init__.py  conftest.py
tests/fixtures/: create_test_midi.py  mock_api_responses.py  mock_papers.json  test_pattern.mid
tests/integration/: test_api_integration.py  test_phase5_integration.py  test_vector_search.py  test_week2_integration.py
tests/unit/: test_api.py  test_api_models.py  test_api_routes.py  test_celery_task.py  test_collector_articles.py  test_collector_audio.py  test_collector_midi.py  test_collector_papers.py  test_database_analytics.py  test_database_caching.py  test_database_similarity.py  test_export.py  test_generate.py  test_generate_pattern_task.py  test_humanize.py  test_io.py  test_mock.py  test_model_loader.py  test_similarity_search.py  test_styles.py  test_validate.py  test_worker.py
(+2336 files in other folders)
